@@ -52,8 +52,9 @@ procedure Afile is
    Size : Natural := 0;
 
    function CB (Request : in Status.Data) return Response.Data is
-      Strm : Resources.Streams.Stream_Access;
-      URI  : constant String := Status.URI (Request);
+      Strm  : Resources.Streams.Stream_Access;
+      URI   : constant String := Status.URI (Request);
+      Share : constant String := "share=yes";
    begin
       if URI = "/first" then
          return Response.File
@@ -80,7 +81,9 @@ procedure Afile is
       elsif URI = "/fifth" then
          Strm :=  new Resources.Streams.Disk.Stream_Type;
          Resources.Streams.Disk.Open
-           (Resources.Streams.Disk.Stream_Type (Strm.all), "afile.o");
+           (Resources.Streams.Disk.Stream_Type (Strm.all),
+            "afile.o",
+            Form => Share);
          return Response.Stream
            (MIME.Application_Octet_Stream, Strm,
             Disposition => Response.Inline);
@@ -88,7 +91,9 @@ procedure Afile is
       elsif URI = "/sixth" then
          Strm :=  new Resources.Streams.Disk.Stream_Type;
          Resources.Streams.Disk.Open
-           (Resources.Streams.Disk.Stream_Type (Strm.all), "afile.o");
+           (Resources.Streams.Disk.Stream_Type (Strm.all),
+            "afile.o",
+            Form => Share);
          return Response.Stream
            (MIME.Application_Octet_Stream, Strm,
             Disposition => Response.Attachment);
@@ -96,7 +101,9 @@ procedure Afile is
       elsif URI = "/seventh" then
          Strm :=  new Resources.Streams.Disk.Stream_Type;
          Resources.Streams.Disk.Open
-           (Resources.Streams.Disk.Stream_Type (Strm.all), "afile.o");
+           (Resources.Streams.Disk.Stream_Type (Strm.all),
+            "afile.o",
+            Form => Share);
          return Response.Stream
            (MIME.Application_Octet_Stream, Strm,
             User_Filename => "a_stream.o", Disposition => Response.Inline);
@@ -104,7 +111,9 @@ procedure Afile is
       elsif URI = "/eighth" then
          Strm :=  new Resources.Streams.Disk.Stream_Type;
          Resources.Streams.Disk.Open
-           (Resources.Streams.Disk.Stream_Type (Strm.all), "afile.o");
+           (Resources.Streams.Disk.Stream_Type (Strm.all),
+            "afile.o",
+            Form => Share);
          return Response.Stream
            (MIME.Application_Octet_Stream, Strm,
             Disposition   => Response.Attachment,
@@ -116,7 +125,9 @@ procedure Afile is
       elsif URI = "/tenth" then
          Strm :=  new Resources.Streams.Disk.Stream_Type;
          Resources.Streams.Disk.Open
-           (Resources.Streams.Disk.Stream_Type (Strm.all), "afile.o");
+           (Resources.Streams.Disk.Stream_Type (Strm.all),
+            "afile.o",
+            Form => Share);
          return Response.Stream (MIME.Application_Octet_Stream, Strm);
       else
          return Response.Build (MIME.Text_HTML, "URI not supported");
